feat(rh): o RH deixa de ser folha de salários e passa a gerir pessoal
Fecha os blocos B3, B5, B6 e B8 da RH_COMPLETO_SPEC — migrações V53–V56 —
e com eles os sete 🔴 que a auditoria de 22/08 levantou.

B5 — retenções por entregar (V53). O IRPS retido e o INSS das duas partes
eram calculados, impressos no mapa fiscal e nunca mais tocados: ficavam na
conta da empresa indistinguíveis de dinheiro próprio, e quem os gastasse só
descobria o buraco no dia da entrega. Passam a nascer como dívida no acto do
pagamento, com prazo, aviso no sino e entrega com saída de tesouraria. A folha
passou também a chegar ao razão, por evento (PayslipPaidEvent), fechando a
lacuna declarada na CONTABILIDADE_SPEC §7 — e o RH continua sem importar a
contabilidade, com auditoria estática a garanti-lo nos dois sentidos.

Os valores legais (§6) saíram de constantes compiladas para HrPolicyConfig,
por empresa, com vigência e base legal. Sem configuração o sistema di-lo, em
vez de adivinhar.

B6 — descontos, adiantamentos e empréstimos (V54). Um adiantamento saía da
caixa e nunca voltava, porque nada o ligava ao recibo do período; e o recibo
mostrava um "outros descontos" anónimo. Uma tabela para os três casos, com o
saldo em dívida apurado das linhas e nunca gravado: anular um recibo devolve
as prestações à dívida sozinho.

B3 — cessação e acerto final (V55). Substitui uma String. O 13.º proporcional
e o saldo de férias, que o sistema já sabia calcular, nunca eram calculados
nesta situação. Cessar mostra a conta antes de a cometer, e quando não sabe
calcular uma linha — direito a férias ou aviso prévio por configurar — di-lo
por escrito em vez de a omitir.

B8 — correcções (V56). Férias em dias úteis (mesma fonte que o ponto usa),
direito anual configurável, APPROVED no recibo (quem processava a folha
pagava-a sozinho), remuneração por tipo de falta declarada em vez de
acidental, fecho do mês, ficheiro de pagamento bancário e documentos do
colaborador com validade.

Desktop: separadores Descontos,